--- a/portfolio.html
+++ b/portfolio.html
@@ -1,9 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>bosingouisdbib</title>
+	<title>
+		Portfolio
+	</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-	dfknks'hnsak'phnd'fhnsh'semhs;mhh;
+	<section class="giantBox">
+	<div class="navigation">
+		<div class="name">Vu Vuong</div>
+		<div class="links">
+			<a href="tsukoni.github.io">About</a> | <a href="tsukoni.github.io/Portfolio">Portfolio</a> | <a href="tsukoni.github.io/contact">Contact</a>
+		</div>
+	</div>	
+
+
+		<div class="portfolio">
+			<h1>Portfolio</h1>
+			<hr>
+			<section>
+				<img id="a" src="assets/images/banana.jpg">
+				<img id="b" src="assets/images/soon.png">
+				<img id="c" src="assets/images/placeholder.png">
+				<img id="d" src="assets/images/me-you.jpg">
+			</section>
+		</div>
+
+		<div class ="connect">
+			<h1>Connect With Me</h1>
+			<hr>
+			<img id="e"	src="assets/images/github.png">
+			<img id="f" src="assets/images/linkedin.png">
+			<img id="g" src="assets/images/stack.png">
+		</div>
+	</section>
 </body>
 </html>
